--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>RNG Fish Calculator — Light (Modern)</title>
+    <title>RNG Fish It</title>
 
     <!-- Bootstrap 5 -->
     <link
@@ -580,3 +580,4 @@
     </script>
   </body>
 </html>
+
